--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
+    "@tailwindcss/postcss": "^4.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "6.4"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "6.4",
+    "tailwindcss": "^4.0.5"
   },
   "browserslist": [
     "last 2 versions"
